src/styles/main.scss
@import '~bulma/bulma.sass';

$brand-dark-grey: #242323;
$brand-purple: #ac6fde;

* {
  font-family: 'Roboto Slab', serif;
  box-sizing: border-box;
}

.button {
  color: $brand-purple;
  font-weight: bold;
} 

.navbar-burger {
  color: $brand-purple;
}

hr {
  background-color: $brand-purple;
}

.social-icon {
  margin: 0px 5px;
}

.social-link {
  display: inline;
}

.software-icons  {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  list-style: none;
  li {
    justify-content: center;
    border: 1px solid rgba(0,0,0,.125);
    margin: 20px 5px 5px 5px;
    width: 100px;
    height: 100px;
    align-items: center;
    font-size: 13px;
    i {
      font-size: 50px;
    }
  }
}

.cell {
  display: flex;
  flex-direction: column;
}

.cell:hover {
  color: $brand-purple;
}

.cell:hover i, .cell:hover span{
  transition: all 0.65s;
  transform: rotateY(360deg);
}

.dark {
  background-color: $brand-dark-grey;
  color: white;
  h1, p {
    color: white;
  }
}

.purple-text {
  color: $brand-purple;
}

.proj-text-container {
  height: fit-content;
  p {
    height: fit-content;
  }
  i {
    font-size: 50px;
    margin: 5px 3px;
  }
  .small-icon {
    font-size: 25px;
  }
}  
.proj-techs {
display: flex;
flex-wrap: wrap;
}

.proj-button {
  margin: 5px 0px 0px 5px;
}

.arrow-buttons {
  display: flex;
  justify-content: space-evenly;
  button {
    width: 115px;
  }
}

.image-card {
  position: relative;
  background-size: cover;
  padding: 0;
  height: 20em;
  margin: 20px;
  display: flex;
  flex-direction: column;
  justify-content: end;
  background-color: rgba(36, 35, 34, 0.75); /* Tint color */
  background-blend-mode: multiply;
  h2 {
    font-size: 20px;
    font-weight: bolder;
  }
  h2, p {
    color: white;
    padding: 0px 15px;
  }
  p {
    margin-bottom: 20px;
  }
}

.language {
  background-image: url('../assets/書道.jpg');
}
.music {
  background-image: url('../assets/jazz-bass.jpg');
}
.bouldering {
  background-image: url('../assets/bouldering.jpg');
}

.socials {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  p {
    margin: 5px 0px;
  }
}

@media only screen and (min-width: 600px) {
  .hero-title {
    font-size: 70px;
  }

  .hero-subtitle {
    font-size: 50px;
  }

  .software-icons {
    justify-content: left;
  }
}

@media only screen and (max-width: 600px) {
  .proj-techs {
    justify-content: center;
  }

  .project-links {
    text-align: center;
  }
}

